app/static/style.css
body {
	padding-top: 51px;
}

html, body {
	height: 100%;
}

.main {
	/* Pad by navbar height */
	padding-top: 20px;
	/* Pad + negative indent by footer height */
	margin-bottom: -50px;
	padding-bottom: 50px;
	min-height: 100%;
}

.eventBlock {
	border-radius: 6px;
	background-color: #eee;
	padding: 20px;
}

footer {
	width: 75%;
	margin: auto auto 0;
}

.checkbox label .toggle {
	margin-left: 0 !important;
	width: 150px !important;
}

.imageTooltip {
	position: relative;
}

.imageTooltip img {
	display:none;
}

.imageTooltip:hover img {
	display: block;
	position: absolute;
}

.progress-bar {
	min-width: -moz-max-content;
	min-width: -webkit-max-content;
	min-width: max-content;
	padding: 0 5px;
}

.col-md-4 #description {
	height: 200px;
}

.col-md-4 #info {
	height: 50px;
}

